standardizing methods