@@ -9,9 +9,11 @@ import java.util.function.Supplier;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.xenei.robot.common.DistanceSensor;
 import org.xenei.robot.common.Location;
 import org.xenei.robot.common.Position;
 import org.xenei.robot.common.mapping.Map;
+import org.xenei.robot.common.messages.Topic;
 import org.xenei.robot.common.utils.CoordUtils;
 
 public class FakeDistanceSensor2 implements FakeDistanceSensor {
@@ -20,13 +22,13 @@ public class FakeDistanceSensor2 implements FakeDistanceSensor {
     private final double angle;
     private static final double MAX_RANGE = 5;
     private final Supplier<Position> positionSupplier;
-    private final CopyOnWriteArrayList<Consumer<Readings>> listeners;
+    private final Topic<Readings> distanceTopic;
 
     public FakeDistanceSensor2(Map map, double angle, Supplier<Position> positionSupplier) {
         this.map = map;
         this.angle = angle;
         this.positionSupplier = positionSupplier;
-        this.listeners = new CopyOnWriteArrayList<>();
+        this.distanceTopic = map.getContext().bus.distance;;
     }
 
     @Override
@@ -45,11 +47,7 @@ public class FakeDistanceSensor2 implements FakeDistanceSensor {
     private void deliver(Position position, Location location) {
         if (location.range() <= maxRange()) {
             DistanceReading dr = new DistanceReading(location.theta(), location.range());
-            List<DistanceReading> lst = Arrays.asList(dr);
-            Readings readings = new Readings(position, lst);
-            for (Consumer<Readings> listener : listeners) {
-                listener.accept(readings);
-            }
+            distanceTopic.send(new Readings(position, List.of(dr)));
         }
     }
 
@@ -65,15 +63,4 @@ public class FakeDistanceSensor2 implements FakeDistanceSensor {
     public double maxRange() {
         return MAX_RANGE;
     }
-
-    @Override
-    public void addListener(Consumer<Readings> listener) {
-        listeners.add(listener);
-    }
-
-    @Override
-    public void removeListener(Consumer<Readings> listener) {
-        listeners.remove(listener);
-    }
-
 }
